<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin"
    android:background="@color/purple_200"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/Title"
        style="@style/CommonTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        app:layout_constraintBottom_toTopOf="@id/Counter"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Counter"
        style="@style/Counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/Counter_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Title"
        tools:text="54" />

    <EditText
        android:id="@+id/Counter_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@id/Increase_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Counter"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/Increase_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/increment_button_text"
        app:layout_constraintBottom_toTopOf="@id/Reset_button"
        app:layout_constraintEnd_toStartOf="@id/Decrease_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Counter_value" />

    <Button
        android:id="@+id/Decrease_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decrement_button_text"
        app:layout_constraintBottom_toTopOf="@id/Reset_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/Increase_button"
        app:layout_constraintTop_toBottomOf="@id/Counter_value" />

    <Button
        android:id="@+id/Reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Increase_button" />

</androidx.constraintlayout.widget.ConstraintLayout>